@@ -7,6 +7,8 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- add user-group relation to create user and group on the system
+
 0.8.2 - 2021-10-13
 ------------------
 
